# TSFormatter

./: .gitignore  README.md  pyproject.toml  test_formatter.py  tox.ini
.github/workflows/: publish.yaml  tests.yaml
tests/: test_formatter.py
tsformatter/: __init__.py  formatter.py
