[project]
name = "tsformatter"
version = "0.2.0"
authors = [{ name = "0x4aK" }]
description = "Helper package to format TeamSpeak BBCode"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0x4aK/tsformatter"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tsformatter"]

[tool.pytest.ini_options]
addopts = "--cov"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
