[project]
name = "tsformatter"
version = "0.2.1"
authors = [{ name = "0x4aK" }]
description = "Helper package to format TeamSpeak BBCode"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0x4aK/tsformatter"

[project.optional-dependencies]
tests = ["mypy >= 1.9.0", "pytest==8.1.1", "pytest-cov==5.0.0"]

[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tsformatter"]

[tool.setuptools.package-data]
tsformatter = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8.0
envlist = py38, py39, py310, py311, py312, mypy
isolated_build = true

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310, mypy
    3.11: py311
    3.12: py312

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
extras = tests
commands = pytest --basetemp={envtmpdir} --cov

[testenv:mypy]
basepython = python3.10
deps =
    mypy
commands = mypy tsformatter
"""
